--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.28.3",
     "@parcel/babel-preset-env": "^2.7.0" ,
     "babel-jest": "^29.0.3",
     "jest": "^29.0.3",
